[gd_scene load_steps=7 format=3 uid="uid://dvaw2npxvr5ig"]

[ext_resource type="Script" path="res://game_over.gd" id="1_kvdhk"]
[ext_resource type="Theme" uid="uid://chke2i30au63p" path="res://main_menu.tres" id="1_uic5f"]

[sub_resource type="Gradient" id="Gradient_pelir"]
colors = PackedColorArray(1, 0, 0.054902, 1, 0.203125, 0, 0.011152, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yo4au"]
gradient = SubResource("Gradient_pelir")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_svomw"]
colors = PackedColorArray(0, 0.667969, 0, 1, 0, 0.132813, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gowq0"]
gradient = SubResource("Gradient_svomw")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kvdhk")

[node name="LoseState" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoseBG" type="TextureRect" parent="LoseState"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_yo4au")

[node name="LoseLabel" type="Label" parent="LoseState"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -24.0
offset_right = 121.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uic5f")
theme_override_font_sizes/font_size = 48
text = "Game Over"

[node name="WinState" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinBG" type="TextureRect" parent="WinState"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_gowq0")

[node name="Container" type="VBoxContainer" parent="WinState"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WinLabel" type="Label" parent="WinState/Container"]
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_uic5f")
theme_override_font_sizes/font_size = 48
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="WinState/Container"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_uic5f")
theme_override_font_sizes/font_size = 20
text = "Score: 34234 (New High Score)"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
